--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 </blockquote>
 
 <ul>
-<li><a href="https://shenglian.github.io/-lottery/index_part2.html">Website</a></li>
+<li><a href="https://shenglian.github.io/-lottery/index_part2_demo.html">Website</a></li>
 </ul>
 
 <h2 id="gettingstarted">Getting started</h2>
