--- a/README.html
+++ b/README.html
@@ -94,14 +94,17 @@ _lottery.stop();
 
 <p>設定最後轉動圈數</p>
 
-<h3 id="setresultitemresultitemnum">setResultItem(resultItemNum)</h3>
+<h3 id="setresultitemresultitemnumcallback">setResultItem(resultItemNum, callback)</h3>
 
 <ul>
 <li><strong>resultItemNum</strong>:</li>
 <li>Type: <code>Number</code></li>
+<li><strong>callback</strong>:</li>
+<li>Type: <code>Function</code></li>
 </ul>
 
-<p>設定最後產生結果</p>
+<p>resultItemNum : 設定最後產生結果
+callback : 設定最後產生結果的事件</p>
 
 <h3 id="doanimate">doAnimate()</h3>
 
